--- a/src/styles/clockStyle.css
+++ b/src/styles/clockStyle.css
@@ -10,9 +10,13 @@
   box-shadow: 0px 1px 2px 2px red;
 }
 .banner-2 {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 12rem;
 }
-.typewriter {
+.typewriter-2 {
   color: red;
   font-size: 1rem;
   padding-bottom: 0.5rem;
