--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -95,6 +95,10 @@
   display: flex;
   /* border: 1px solid red; */
 }
+.banners {
+  display: flex;
+  flex-direction: column;
+}
 .welcome-btn {
   color: white;
   font-weight: 700;
@@ -106,6 +110,7 @@
   box-shadow: 1px 1px white;
   font-size: 0.8rem;
   cursor: pointer;
+  width: fit-content;
 }
 .typewriters {
   color: blue;
@@ -116,4 +121,5 @@
   color: red;
   margin-top: 1rem;
   font-size: 1.5rem;
+  width: fit-content;
 }
