--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,6 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  padding: 1rem 4rem;
   width: 100%;
 }
 
@@ -83,21 +82,23 @@
   transition: 0.3ms ease-in-out;
 }
 .main {
-  display: grid;
-  grid-template-columns: 90% 10%;
+  display: flex;
+  align-items: start;
   justify-content: space-between;
-  /* border: 2px solid; */
+  border: 2px solid;
   width: 100%;
-  align-items: center;
   margin-top: 8rem;
 }
 .banner {
-  display: flex;
+  display: grid;
   /* border: 1px solid red; */
 }
 .banners {
   display: flex;
   flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  /* border: 1px solid; */
 }
 .welcome-btn {
   color: white;
@@ -122,4 +123,19 @@
   margin-top: 1rem;
   font-size: 1.5rem;
   width: fit-content;
+}
+.about-me {
+  max-width: 70%;
+  font-size: 0.7rem;
+  text-align: left;
+  color: gray;
+}
+.connect2 {
+  align-items: start;
+  border: 1px solid;
+  text-align: left;
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  height: 4rem;
 }
