--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -131,11 +131,16 @@
   color: gray;
 }
 .connect2 {
-  align-items: start;
-  border: 1px solid;
+  align-items: end;
+  /* border: 1px solid; */
   text-align: left;
   margin-top: 3rem;
   display: flex;
   align-items: center;
-  height: 4rem;
+  gap: 5px;
+  font-weight: 700;
+  font-size: 0.8rem;
+}
+.link {
+  padding-top: 7px;
 }
