--- a/src/styles/clockStyle.css
+++ b/src/styles/clockStyle.css
@@ -7,7 +7,7 @@
   border-radius: 50%;
   position: relative;
   border: 2px solid black;
-  box-shadow: 0px 1px 2px 2px red;
+  box-shadow: 0px 1px 2px 2px goldenrod;
 }
 .banner-2 {
   display: flex;
@@ -17,7 +17,7 @@
   height: 12rem;
 }
 .typewriter-2 {
-  color: red;
+  color: goldenrod;
   font-size: 1rem;
   padding-bottom: 0.5rem;
   width: max-content;
@@ -72,7 +72,7 @@
   position: absolute;
   bottom: 50%;
   left: 50%;
-  border: 1px solid red;
+  border: 1px solid goldenrod;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   transform-origin: bottom;
@@ -82,7 +82,7 @@
 .clock::after {
   content: "";
   position: absolute;
-  background-color: red;
+  background-color: goldenrod;
   z-index: 11;
   width: 0.5rem;
   height: 0.5rem;
@@ -94,7 +94,7 @@
 .clock .hand.second {
   width: 0.2rem;
   height: 45%;
-  background-color: red;
+  background-color: goldenrod;
 }
 .clock .hand.minute {
   width: 0.3rem;
@@ -102,7 +102,7 @@
   background-color: black;
 }
 .clock .hand.hour {
-  width: 0.5rem;
+  width: 0.55rem;
   height: 30%;
   background-color: black;
 }
