--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,9 +1,15 @@
-.project-pic {
-  width: 80%;
-  height: 15rem;
+.skill-body {
+  background-color: #151515;
+  padding: 3rem 4rem;
+  margin-top: 3.5rem;
+  display: grid;
+  gap: 2rem;
 }
-.skill-body{
-    background-color: #151515;
-    padding: 5rem 4rem;
-    margin-top: 4rem;
+.project-pic {
+  width: 90%;
+  height: 12rem;
+}
+.skill-intro {
+  font-size: 0.8rem;
+  color: darkgray;
 }
