--- a/src/styles/clockStyle.css
+++ b/src/styles/clockStyle.css
@@ -8,6 +8,10 @@
   position: relative;
   border: 2px solid black;
   box-shadow: 0px 1px 2px 2px goldenrod;
+  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 .banner-2 {
   display: flex;
