--- a/src/styles/clockStyle.css
+++ b/src/styles/clockStyle.css
@@ -1,3 +1,15 @@
+.banner-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 12rem;
+  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 1px solid;
+}
 .clock {
   width: 10rem;
   height: 10rem;
@@ -8,18 +20,8 @@
   position: relative;
   border: 2px solid black;
   box-shadow: 0px 1px 2px 2px goldenrod;
-  float: right;
-  position: absolute;
-  top: 0;
-  right: 0;
 }
-.banner-2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 12rem;
-}
+
 .typewriter-2 {
   color: goldenrod;
   font-size: 1rem;
@@ -109,4 +111,10 @@
   width: 0.55rem;
   height: 30%;
   background-color: black;
+}
+
+@media (max-width: 768px) {
+  .banner-2 {
+    display: none;
+  }
 }
