--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,20 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("../images/w00056.jpg");
-  padding: 2rem 4rem ;
+  background: url(./images/w00056.jpg);
+  padding: 2rem 4rem;
 }
 
 @media (max-width: 768px) {
   body {
-   padding: 2rem 3rem;
+    padding: 2rem 3rem;
   }
-}
+} */
