Navbar almost done

--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: url(./images/w00056.jpg);
-  padding: 2rem 4rem;
+  padding: 0;
+  box-sizing: border-box;
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
-
-@media (max-width: 768px) {
-  body {
-    padding: 2rem 3rem;
-  }
-} */
