--- a/src/styles/clockStyle.css
+++ b/src/styles/clockStyle.css
@@ -1,32 +1,7 @@
-.banner-2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 12rem;
-  float: right;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border: 1px solid;
-}
 .clock {
-  width: 10rem;
-  height: 10rem;
   background: url(../images/w00056.jpg);
   background-position: center;
-  background-size: cover;
-  border-radius: 50%;
-  position: relative;
-  border: 2px solid black;
-  box-shadow: 0px 1px 2px 2px goldenrod;
-}
-
-.typewriter-2 {
-  color: goldenrod;
-  font-size: 1rem;
-  padding-bottom: 0.5rem;
-  width: max-content;
+  background-size: contain;
 }
 .clock .number {
   --rotation: 0;
@@ -111,10 +86,4 @@
   width: 0.55rem;
   height: 30%;
   background-color: black;
-}
-
-@media (max-width: 768px) {
-  .banner-2 {
-    display: none;
-  }
 }
