adjusting the code

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
+.body{
+   background: url(./images/w00056.jpg);
+  background-position: center;
+  background-size: contain;
+
+}
