--- a/src/styles/clockStyle.css
+++ b/src/styles/clockStyle.css
@@ -1,6 +1,5 @@
 .clock {
-  background: url(../images/ggg.jpg);
-  background-position: center;
+  background: url(../images/w00056.jpg);
   background-size: contain;
 }
 .clock .number {
@@ -53,7 +52,7 @@
   position: absolute;
   bottom: 50%;
   left: 50%;
-  border: 1px solid goldenrod;
+  border: 1px solid #fc4d5b;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   transform-origin: bottom;
@@ -63,7 +62,7 @@
 .clock::after {
   content: "";
   position: absolute;
-  background-color: goldenrod;
+  background-color: #fc4d5b;
   z-index: 11;
   width: 0.5rem;
   height: 0.5rem;
@@ -75,7 +74,7 @@
 .clock .hand.second {
   width: 0.2rem;
   height: 45%;
-  background-color: goldenrod;
+  background-color: #fc4d5b;
 }
 .clock .hand.minute {
   width: 0.3rem;
