background images inserted

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .body {
-  background: url(./images/w00056.jpg);
+  background: url(./images/w000562.jpg);
   background-position: top;
-  background-size: contain;
+  background-size: cover;
 }
